--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@steveeeie/react-page-transition": "^1.3.0",
+    "mongoose": "^8.7.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
