--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@steveeeie/react-page-transition": "^1.3.0",
+    "cloudinary": "^2.5.1",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
     "next-cloudinary": "^6.16.0",
