--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@steveeeie/react-page-transition": "^1.3.0",
     "cloudinary": "^2.5.1",
     "mongoose": "^8.7.2",
