--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@steveeeie/react-page-transition": "^1.3.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "mongoose": "^8.7.2",
     "next": "14.2.15",
@@ -21,6 +22,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
